--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -105,7 +105,7 @@ sections:
         className: cardsD
         items:
           - title: REST API v2
-            html: '<p><a href="https://aka.ms/luis-endpoint-apis">Slutpunkts-API</a></p><p><a href="https://aka.ms/luis-authoring-apis">Redigera API</a></p>'
+            html: '<p><a href="https://go.microsoft.com/fwlink/?linkid=2092356">Slutpunkts-API</a></p><p><a href="https://go.microsoft.com/fwlink/?linkid=2092087">Redigera API</a></p>'
           - title: 'SDK:er'
             html: '<p><a href="https://aka.ms/luis-endpoint-sdk">Slutpunkt för .NET SDK</a></p><p><a href="https://aka.ms/luis-authoring-sdk">Redigera .NET SDK</a></p>'
           - title: PowerShell
