--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -168,7 +168,7 @@
         - name: 'Blobar, köer, tabeller och filer'
           href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/client'
         - name: Dataförflyttning
-          href: 'https://docs.microsoft.com/dotnet/api/microsoft.windowsazure.storage.datamovement'
+          href: 'https://docs.microsoft.com/dotnet/api/microsoft.azure.storage.datamovement'
         - name: Resource Manager
           href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/management'
     - name: Java
